# Sports-Season-Simulation

./: .gitignore  Model_XGBoost.py  Model_neural_network.py  Model_random_forest.py  Model_ridge_regression.py  data_process.py  database.py  index.html  rapid.md  script.js  styles.css
backend/: .env.example  00_START_HERE.txt  ARCHITECTURE.md  PLAYER_COMPLETE_DOCUMENTATION.md  RANKING_QUICKSTART.md  README.md  README_RANKING.md  SIMULATION_ALL_IN_ONE.md  manage.py  openapi.json  openapi.yaml  pyproject.toml  requirements.txt
backend/api/: admin.py  models.py  tests.py  urls.py  views.py
backend/api/management/commands/: calculate_elo.py  calculate_plus_stats.py
backend/api/migrations/: 0001_initial.py
backend/api/services/: cache_manager.py  matchup.py  rankings.py  simulation.py  team_ranking.py
backend/api/tests/: test_ranking.py
backend/api/utils/: __init__.py  elo_rating.py  monte_carlo.py  player_rating.py  roster.py  season_prediction.py  team_rating.py  teams.py  win_probability.py
backend/md/: DOCUMENTATION_INDEX.md  FILE_STRUCTURE.md  FINAL_VALIDATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MERGE_COMPLETION_SUMMARY.md  RANKING_API.md  README_SIMULATION.md  SIMULATION_ARCHITECTURE.md  SIMULATION_COMPLETE.md  SIMULATION_COMPLETE_GUIDE.md  SIMULATION_DELIVERABLES.md  SIMULATION_DOCS_INDEX.md  SIMULATION_IMPLEMENTATION.md  SIMULATION_OPENAPI.yaml  SIMULATION_QUICKSTART.md  VERIFICATION_COMPLETE.md  VISUAL_GUIDE.md
backend/sports_simulator/: asgi.py  settings.py  urls.py  wsgi.py
batting/: Model_XGBoost.py  Model_neural_network.py  data_process.py  (+2 more)
(+59 files in other folders)
