[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django==5.0.2",
    "django-cors-headers==4.3.1",
    "djangorestframework==3.14.0",
    "numpy>=1.24.0",
    "psycopg2-binary==2.9.9",
    "python-decouple==3.8",
]
